--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 
 #inputs {
   display: flex;
-  width: 33%;
-  text-align: center;
+  width: 100%;
+  justify-content: space-around;
 }
 
 #full {
@@ -12,29 +12,28 @@
 
 #titulo {
   text-align: center;
-  font-size:xx-large;
+  font-size: calc(12px + (32 - 12) * ((100vw - 300px) / (1600 - 300)));
   color: darkgrey;
-  padding-left: 5px;
-  padding-right: 5px;
+  padding-left: 0.5%;
+  padding-right: 0.5%;
   font-style: italic;
 }
 
 #titulo_verde {
   text-align: center;
-  font-size:xx-large;
+  font-size: calc(12px + (32 - 12) * ((100vw - 300px) / (1600 - 300)));
   color: darkgrey;
-  padding-left: 5px;
-  padding-right: 5px;
+  padding-right: 0.25%;
   font-style: italic;
 }
 
 
 #titulo_azul {
   text-align: center;
-  font-size:xx-large;
+  font-size: calc(12px + (32 - 12) * ((100vw - 300px) / (1600 - 300)));
   color: darkgrey;
-  padding-left: 5px;
-  padding-right: 5px;
+  padding-left: 0.25%;
+  padding-right: 0.25%;
   font-style: italic;
 }
 
@@ -50,7 +49,8 @@
 
 #div_titulo{
   display: flex;
-  justify-items: center;
+  flex-direction: row;
+  justify-content: center;
 }
 
 
@@ -59,18 +59,18 @@
 }
 
 .divisiones{
-  margin-left: 10%;
   margin-top:0px;
-  margin-right: 10%;
   margin-bottom: 0px;
-  
+  margin-left: 1%;
+  margin-right: 1%;
+
 }
 
 .ingresar {
   border-color: darkgrey;
   background-color : transparent;
   color : whitesmoke;
-  padding: 10px 20px;
+  padding: 1% 3%;
   display: inline-block;
   text-align: center;
 
@@ -80,11 +80,12 @@
   border-color: darkgrey;
   background-color : transparent;
   color : whitesmoke;
-  padding: 10px 50px;
+  padding: 2.5% 15%;
   display: inline-block;
   border-radius: 4px;
-  width: 200px;
+  width: calc(40px + (250 - 40) * ((100vw - 300px) / (1600 - 300)));
   text-align: center;
+  font-size: calc(6px + (16 - 6) * ((100vw - 300px) / (1600 - 300)));
 
 }
 
@@ -96,11 +97,13 @@
   border-color: darkgrey;
   background-color : transparent;
   color : whitesmoke;
-  padding: 10px 50px;
+  padding: 2.5% 15%;
   display: inline-block;
   border-radius: 4px;
-  width: 200px;
+  width: calc(40px + (250 - 40) * ((100vw - 300px) / (1600 - 300)));
   text-align: center;
+  font-size: calc(6px + (16 - 6) * ((100vw - 300px) / (1600 - 300)));
+
 
 }
 
@@ -114,11 +117,14 @@
   border-color: darkgrey;
   background-color : transparent;
   color : whitesmoke;
-  padding: 10px 50px;
+  padding: 5.5% 15%;
   display: inline-block;
   border-radius: 4px;
-  width: 200px;
+  width: calc(40px + (250 - 40) * ((100vw - 300px) / (1600 - 300)));
+
   text-align: center;
+  font-size: calc(6px + (16 - 6) * ((100vw - 300px) / (1600 - 300)));
+
 
 }
 
@@ -129,31 +135,31 @@
 
 
 .container {
-    padding-top: 10px;
-    width: 1350px;
-    height: 500px;
+    padding-top: 2%;
+    width: 100%;
+    height: 750px;
     position: relative;
     background: #1C1B1E;
   }
 
 
 .nodo {
-    width: 70px !important;
-    height: 70px !important;
+    width: calc(30px + (70 - 30) * ((100vw - 300px) / (1600 - 300))); !important;
+    height: calc(30px + (70 - 30) * ((100vw - 300px) / (1600 - 300))); !important;
     border-radius: 50% !important;
     position: absolute !important;
     background: #619E61 !important;
-    font-size: 20px !important;
+    font-size: calc(8px + (20 - 8) * ((100vw - 300px) / (1600 - 300)));
     z-index:3;
   }
 
   .nodo_L {
-    width: 70px !important;
-    height: 70px !important;
+    width: calc(30px + (70 - 30) * ((100vw - 300px) / (1600 - 300))); !important;
+    height: calc(30px + (70 - 30) * ((100vw - 300px) / (1600 - 300))); !important;
     border-radius: 50% !important;
     position: absolute !important;
     background: #5877a0 !important;
-    font-size: 20px !important;
+    font-size: calc(8px + (20 - 8) * ((100vw - 300px) / (1600 - 300)));
     z-index:3;
   }
 
@@ -174,4 +180,9 @@
     height: 70px;
     position: relative;
     background: #1C1B1E;
+  }
+
+  .ingresar {
+      font-size: calc(6px + (16 - 6) * ((100vw - 300px) / (1600 - 300)));
+      width: calc(40px + (250 - 40) * ((100vw - 300px) / (1600 - 300)));
   }
