--- a/styles.css
+++ b/styles.css
@@ -154,8 +154,8 @@
   }
 
   .nodo_L {
-    width: calc(30px + (70 - 30) * ((100vw - 300px) / (1600 - 300))); !important;
-    height: calc(30px + (70 - 30) * ((100vw - 300px) / (1600 - 300))); !important;
+    width: calc(30px + (80 - 30) * ((100vw - 300px) / (1600 - 300))); !important;
+    height: calc(30px + (80 - 30) * ((100vw - 300px) / (1600 - 300))); !important;
     border-radius: 50% !important;
     position: absolute !important;
     background: #5877a0 !important;
@@ -176,7 +176,7 @@
     margin-left: 30px;
     margin-top: 20px;
     margin-bottom: 20px;
-    width: 1350px;
+    width: 100%;
     height: 70px;
     position: relative;
     background: #1C1B1E;
